Fix non-breaking lines on mobile and red dot

--- a/live/live_files/live.css
+++ b/live/live_files/live.css
@@ -29,6 +29,14 @@ body {
 	text-decoration: underline;
 }
 
+a {
+	word-wrap: break-word;
+}
+
+.live-header {
+	margin: 0 15px;
+}
+
 h1 {
 	color: #fff;
 }
